<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_username"
                style="@style/InputStyle.TypeText.Rounded"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:hint="@string/label_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                style="@style/InputStyle.TypeText.Rounded"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="@dimen/dimen_48dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:hint="@string/label_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_username" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/label_remember_me"
                app:layout_constraintStart_toStartOf="@id/et_username"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/label_sign_in"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/et_username"
                app:layout_constraintTop_toBottomOf="@id/et_password" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btn_sign_in_with_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                app:layout_constraintEnd_toEndOf="@id/et_username"
                app:layout_constraintStart_toStartOf="@id/et_username"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btn_sign_in_with_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                app:layout_constraintEnd_toEndOf="@id/et_username"
                app:layout_constraintStart_toStartOf="@id/et_username"
                app:layout_constraintTop_toBottomOf="@id/btn_sign_in_with_fb" />

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>