<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.detail.ProductDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_product_image"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/img_btn_share"
            android:layout_width="@dimen/dimen_40dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_share_button"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_title"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:ellipsize="end"
            android:maxLines="2"
            app:layout_constraintEnd_toStartOf="@id/img_btn_loved"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product_image"
            tools:text="Totebag Tatte - BUT FIRST, COFFEE" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/img_btn_loved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@id/tv_product_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_product_title"
            app:layout_constraintTop_toTopOf="@id/tv_product_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_description"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            app:layout_constraintEnd_toEndOf="@id/tv_product_title"
            app:layout_constraintStart_toStartOf="@id/tv_product_title"
            app:layout_constraintTop_toBottomOf="@id/tv_product_title"
            tools:text="@string/lorem_ipsum" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_price"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/btn_buy"
            app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
            app:layout_constraintTop_toTopOf="@id/btn_buy"
            tools:text="Rp 90.000" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_buy"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="@string/label_buy"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_product_description" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>